--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
 
+}
 
 
 /*NAV*/
 
+header{
+    font-family: Helvetica;
+}
+
 .fix{
     position: fixed;
     width: 100vw;
-    font-style: helvetica;
 }
 
 .sony{
@@ -24,8 +30,10 @@
 }
 
 .logo-1{
-    width:20px;
-    height: 20px;
+    color: #000;
+    width: 30px;
+    height: 30px;
+
 }
 
 /*BUTTON*/
@@ -39,10 +47,19 @@
 .big-img{
     padding-top: 136px;
     max-width: 100%;
-    height: auto;
+    min-height: 700px;
+    background-image: url(../img/jumbo-bg.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
 }
 
 /*SECTION*/
+
+section{
+    font-family: Arial, sans-serif;
+}
 
 
 .sec-1 img{
