--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ body{
 }
 
 
+
+
 /*BUTTON*/
 
 .bt{
@@ -89,6 +91,7 @@ section{
 }
 
 .sec-5{
+    max-width: 100%;
     background-color: rgb(49, 50, 53);
 }
 
@@ -96,8 +99,14 @@ section{
     width: 100%;
     height: auto;
     border-radius: 15px;
-    object-fit: cover;
+    object-fit: cover;    
+}
 
+
+.pic{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
 
