--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ body{
     border-radius: 59px;
 }
 
+.bt-w{
+    background-color: rgba(255,255,255, .5);
+    border-color: rgba(255,255,255, .5);
+}
+
+
 /*HEADER*/
 
 
@@ -54,7 +60,6 @@ body{
 .big-img{
     max-width: 100%;
     height: 600px;
-    background-image: url(./img/jumbo-bg.png);
     background-position: center top ;
 }
 
@@ -65,6 +70,15 @@ body{
 .jumbo-2{
     background-image: url(./img/it-takes-two-hero-banner-desktop.jpg);
 }
+
+.jumbo-3{
+    background-image: url(./img/ps-plus-april-monthly-games-featured-image-block.png);
+    background-color: rgb(165, 157, 144);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+
 
 /*SECTION*/
 
