--- a/style.css
+++ b/style.css
@@ -77,6 +77,13 @@ body{
     max-width: 100%;
 }
 
+.jumbo-4{
+    background-color: rgb(8, 17, 41);
+    height: 500px;
+    max-width: 100%;
+
+}
+
 .pic-3{
     width: auto;
     height: 500px ;
